--- a/.github/workflows/helm-releaser.yml
+++ b/.github/workflows/helm-releaser.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/test-case
         with:
-          kebab: "my_long_var2"
+          kebab: "my-long-var2"
