--- a/.github/actions/test-case/action.yaml
+++ b/.github/actions/test-case/action.yaml
@@ -4,6 +4,10 @@ inputs:
   kebab:
     required: true
     description: bebab-case value.
+  other:
+    required: true
+    description: "whatever"
+    default: "default value"
 runs:
   using: composite
   steps:
