--- a/.github/actions/test-case/action.yaml
+++ b/.github/actions/test-case/action.yaml
@@ -14,6 +14,7 @@ runs:
     - name: Convert
       shell: bash
       run: |
+        echo "${{ inputs.other }}"
         APPLICATION_CAMEL_CASE="$(sed -E 's/-([a-z])/\U\1/g' <<< ${{ inputs.kebab }})"
         echo "===="
         echo "app: $APPLICATION_CAMEL_CASE"
